# rust-tao-experiment

./: .tool-versions  Cargo.toml
icons/: icon.icns
macos-bundle/Totodoro.app/Contents/: Info.plist
macos-bundle/Totodoro.app/Contents/MacOS/: Totodoro
macos-bundle/Totodoro.app/Contents/Resources/: icon.icns
src/: main.rs
